--- a/public/starter.html
+++ b/public/starter.html
@@ -3,7 +3,7 @@
 This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
 -->
-<html>
+<html ng-app="patentApp">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,6 +30,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+
+
+  <!-- AngularJS patentApp -->
+  <script type="text/javascript" src="src/components/angular/angular.min.js"></script>
+  <script type="text/javascript" src="src/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  <script type="text/javascript" src="src/components/angular-cookies/angular-cookies.min.js"></script>
+  <script type="text/javascript" src="src/components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="dist/js/patentApp.min.js"></script>
+
 </head>
 <!--
 BODY TAG OPTIONS:
@@ -53,7 +62,6 @@ desired effect
 -->
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
-
   <!-- Main Header -->
   <header class="main-header">
 
@@ -271,27 +279,11 @@ desired effect
     <!-- /.sidebar -->
   </aside>
 
+
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <h1>
-        Page Header
-        <small>Optional description</small>
-      </h1>
-      <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
-        <li class="active">Here</li>
-      </ol>
-    </section>
-
-    <!-- Main content -->
-    <section class="content">
-
-      <!-- Your Page Content Here -->
-
-    </section>
-    <!-- /.content -->
+    <!-- Angular UI-view -->
+    <div ui-view></div>
   </div>
   <!-- /.content-wrapper -->
 
@@ -388,6 +380,7 @@ desired effect
 <script src="plugins/jQuery/jQuery-2.2.0.min.js"></script>
 <!-- Bootstrap 3.3.6 -->
 <script src="bootstrap/js/bootstrap.min.js"></script>
+
 <!-- AdminLTE App -->
 <script src="dist/js/app.min.js"></script>
 
