--- a/public/starter.html
+++ b/public/starter.html
@@ -7,7 +7,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AdminLTE 2 | Starter</title>
+  <title>Litron</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.6 -->
@@ -72,7 +72,7 @@ desired effect
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>A</b>LT</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Admin</b>LTE</span>
+      <span class="logo-lg"><b>Litron</b></span>
     </a>
 
     <!-- Header Navbar -->
@@ -239,12 +239,12 @@ desired effect
     <section class="sidebar">
 
       <!-- Sidebar user panel (optional) -->
-      <div class="user-panel">
+      <div class="user-panel" style="display:none">
         <div class="pull-left image">
           <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Alexander Pierce</p>
+          <p>Litron</p>
           <!-- Status -->
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
@@ -264,11 +264,14 @@ desired effect
 
       <!-- Sidebar Menu -->
       <ul class="sidebar-menu">
-        <li class="header">HEADER</li>
+        <li class="header">Patent Management</li>
         <!-- Optionally, you can add icons to the links -->
-        <li class="active"><a href="#" ui-sref="overview"><i class="fa fa-link"></i> <span>Overview</span></a></li>
+        <li class="active"><a href="#" ui-sref="overview"><i class="fa fa-link"></i> <span>Dashboard Overview</span></a></li>
         <li><a href="#" ui-sref="manage"><i class="fa fa-link"></i> <span>Patent Database</span></a></li>
-        <li class="treeview">
+        <li><a href="#"><i class="fa fa-link"></i> <span>Reports</span></a></li>
+        <li><a href="#"><i class="fa fa-link"></i> <span>Invoice Management</span></a></li>
+        <li><a href="#"><i class="fa fa-link"></i> <span>Settings</span></a></li>
+        <li class="treeview" style="display:none">
           <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span> <i class="fa fa-angle-left pull-right"></i></a>
           <ul class="treeview-menu">
             <li><a href="#">Link in level 2</a></li>
@@ -296,7 +299,7 @@ desired effect
       Anything you want
     </div>
     <!-- Default to the left -->
-    <strong>Copyright &copy; 2015 <a href="#">Company</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2016 <a href="#">Litron</a>.</strong> All rights reserved.
   </footer>
 
   <!-- Control Sidebar -->
