--- a/public/starter.html
+++ b/public/starter.html
@@ -31,12 +31,19 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 
+  <!-- Calendar CSS -->
+  <link rel="stylesheet" href="src/components/fullcalendar/dist/fullcalendar.css"/>
 
   <!-- AngularJS patentApp -->
   <script type="text/javascript" src="src/components/angular/angular.min.js"></script>
   <script type="text/javascript" src="src/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script type="text/javascript" src="src/components/angular-cookies/angular-cookies.min.js"></script>
   <script type="text/javascript" src="src/components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script type="text/javascript" src="src/components/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="src/components/moment/min/moment.min.js"></script>
+  <script type="text/javascript" src="src/components/angular-ui-calendar/src/calendar.js"></script>
+  <script type="text/javascript" src="src/components/fullcalendar/dist/fullcalendar.min.js"></script>
+  <script type="text/javascript" src="src/components/fullcalendar/dist/gcal.js"></script>
   <script src="dist/js/patentApp.min.js"></script>
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/custom.css">
@@ -382,7 +389,7 @@ desired effect
 <!-- REQUIRED JS SCRIPTS -->
 
 <!-- jQuery 2.2.0 -->
-<script src="plugins/jQuery/jQuery-2.2.0.min.js"></script>
+<!-- <script src="plugins/jQuery/jQuery-2.2.0.min.js"></script> -->
 <!-- Bootstrap 3.3.6 -->
 <script src="bootstrap/js/bootstrap.min.js"></script>
 
