Populate Events Array and Hyperlink for each event

--- a/public/js/overview/overview.html
+++ b/public/js/overview/overview.html
@@ -1,5 +1,5 @@
 <section class="content" ui-view>
-  <div ui-calendar ng-model="vm.eventSources"></div>
+  <div ui-calendar="vm.config.calendar" ng-model="vm.eventSources"></div>
 
 
 
