Secured backend API and implemented frontend authentication

--- a/public/starter.html
+++ b/public/starter.html
@@ -23,7 +23,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         apply the skin class to the body tag so the changes take effect.
   -->
   <link rel="stylesheet" href="dist/css/skins/skin-blue.min.css">
-
+  <link rel="stylesheet" href="plugins/iCheck/square/blue.css">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -198,32 +198,15 @@ desired effect
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
               <li class="user-header">
-                <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-
                 <p>
-                  Alexander Pierce - Web Developer
-                  <small>Member since Nov. 2012</small>
+                  Litron
                 </p>
               </li>
               <!-- Menu Body -->
-              <li class="user-body">
-                <div class="row">
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Followers</a>
-                  </div>
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Sales</a>
-                  </div>
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Friends</a>
-                  </div>
-                </div>
-                <!-- /.row -->
-              </li>
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
+                  <a href="#" class="btn btn-default btn-flat">Settings</a>
                 </div>
                 <div class="pull-right">
                   <a href="#" class="btn btn-default btn-flat">Sign out</a>
@@ -273,7 +256,7 @@ desired effect
       <ul class="sidebar-menu">
         <li class="header">Patent Management</li>
         <!-- Optionally, you can add icons to the links -->
-        <li class="active"><a href="#" ui-sref="overview"><i class="fa fa-link"></i> <span>Dashboard Overview</span></a></li>
+        <li><a href="#" ui-sref="overview"><i class="fa fa-link"></i> <span>Dashboard Overview</span></a></li>
         <li><a href="#" ui-sref="manage"><i class="fa fa-link"></i> <span>Patent Database</span></a></li>
         <li><a href="#"><i class="fa fa-link"></i> <span>Reports</span></a></li>
         <li><a href="#"><i class="fa fa-link"></i> <span>Invoice Management</span></a></li>
