Removed EventHistory Container

--- a/public/js/patentManager/patentManager.html
+++ b/public/js/patentManager/patentManager.html
@@ -78,8 +78,8 @@
           <table id="example1" class="table table-bordered table-striped">
             <thead>
             <tr>
-              <th class="col-xs-1">Docket Number</th>
-              <th class="col-xs-1">Application Type </th>
+              <th class="col-xs-1">Docket #</th>
+              <th class="col-xs-1">App. Type </th>
               <th class="col-xs-3" ng-click="vm.changeOrder('englishTitle')">English Title</th>
               <th class="col-xs-4" ng-click="vm.changeOrder('chineseTitle')">Chinese Title</th>
               <th class="col-xs-2">Deadline</th>
