--- a/public/starter.html
+++ b/public/starter.html
@@ -34,6 +34,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Calendar CSS -->
   <link rel="stylesheet" href="src/components/fullcalendar/dist/fullcalendar.css"/>
 
+
   <!-- AngularJS patentApp -->
   <script type="text/javascript" src="src/components/angular/angular.min.js"></script>
   <script type="text/javascript" src="src/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
@@ -45,9 +46,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script type="text/javascript" src="src/components/fullcalendar/dist/fullcalendar.min.js"></script>
   <script type="text/javascript" src="src/components/fullcalendar/dist/gcal.js"></script>
   <script src="dist/js/patentApp.min.js"></script>
+  <!-- Multiselect CSS/JS -->
+  <script type="text/javascript" src="src/components/lodash/dist/lodash.min.js"></script>
+  <script type="text/javascript" src="src/components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/custom.css">
-
 </head>
 <!--
 BODY TAG OPTIONS:
