--- a/public/js/patentManager/patentDetails.html
+++ b/public/js/patentManager/patentDetails.html
@@ -23,24 +23,52 @@
           </div>
           <label class="col-sm-2 control-label">Type</label>
           <div class="col-sm-4">
-            <select class="form-control" placeholder="Application Type" ng-model="vm.patent.applicationType" ng-disabled="!vm.editEnabled">
-              <option ng-repeat="type in vm.applicationTypes" val="{{type}}">{{type}}</option>
-            </select>
+            <input class="form-control" placeholder="Application Type" ng-model="vm.patent.applicationType" disabled>
           </div>
         </div>
         <div class="form-group">
           <label class="col-sm-2 control-label">File Date</label>
           <div class="col-sm-4">
             <p class="input-group">
-              <input type="text" class="form-control" uib-datepicker-popup ng-model="vm.patent.filingDate" is-open="vm.picker1" datepicker-options="vm.dateOptions" ng-required="true" close-text="Close" ng-disabled="!vm.editEnabled" />
+              <input type="text" class="form-control" uib-datepicker-popup ng-model="vm.patent.filingDate" is-open="vm.picker['filingDate']" datepicker-options="vm.dateOptions" ng-required="true" close-text="Close" ng-disabled="!vm.editEnabled" />
               <span class="input-group-btn">
-                <button type="button" class="btn btn-default" ng-click="vm.openDatePicker1()"><i class="glyphicon glyphicon-calendar"></i></button>
+                <button type="button" class="btn btn-default" ng-click="vm.openDatePicker('filingDate')"><i class="glyphicon glyphicon-calendar"></i></button>
               </span>
             </p>
           </div>
           <label class="col-sm-2 control-label">App. Number</label>
           <div class="col-sm-4">
             <input class="form-control" placeholder="Application Number" ng-model="vm.patent.filingNumber" ng-disabled="!vm.editEnabled">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Client Docket Number</label>
+          <div class="col-sm-4">
+            <input class="form-control" placeholder="Client Docket Number" ng-model="vm.patent.clientDocketNumber" ng-disabled="!vm.editEnabled">
+          </div>
+          <label class="col-sm-2 control-label">Publication Date</label>
+          <div class="col-sm-4">
+            <p class="input-group">
+              <input type="text" class="form-control" uib-datepicker-popup ng-model="vm.patent.publicationDate" is-open="vm.picker['publicationDate']" datepicker-options="vm.dateOptions" close-text="Close" ng-disabled="!vm.editEnabled" />
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="vm.openDatePicker('publicationDate')"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+            </p>
+          </div>
+        </div>
+        <div class="form-group" ng-show="vm.statusIs('Allowed')">
+          <label class="col-sm-2 control-label">Issue Number</label>
+          <div class="col-sm-4">
+            <input class="form-control" placeholder="Issue Number" ng-model="vm.patent.issueNumber" ng-disabled="!vm.editEnabled">
+          </div>
+          <label class="col-sm-2 control-label">Patent Term</label>
+          <div class="col-sm-4">
+            <p class="input-group">
+              <input type="text" class="form-control" uib-datepicker-popup ng-model="vm.patent.patentExpirationDate" is-open="vm.picker['patentExpirationDate']" datepicker-options="vm.dateOptions" close-text="Close" ng-disabled="!vm.editEnabled" />
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="vm.openDatePicker('patentExpirationDate')"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+            </p>
           </div>
         </div>
         <!-- Patent Information End -->
@@ -59,37 +87,41 @@
         </div>
         <!-- English & Chinese Titles End -->
         <hr>
-        <!-- Priority Form -->
+        <!-- Test Priority -->
         <div class="form-group">
-          <label class="col-sm-2 control-label">Priority</label>
-          <div class="col-sm-1">
-            <input type="checkbox" ng-model="vm.enablePriorityForm" ng-change="vm.clearPriority()" ng-disabled="!vm.editEnabled">
+          <label class="col-sm-2 control-label">Priorities</label>
+          <a class="btn btn-xs btn-warning col-sm-offset-1 col-sm-8" ng-click="vm.addPriority()" ng-disabled="!vm.editEnabled">Add Priority</a>
+        </div>
+        <div ng-repeat="pri in vm.patent.priority">
+          <div class="form-group">
+            <label class="col-sm-offset-2 col-sm-2 control-label" >Country</label>
+            <div class="col-sm-3">
+              <select class="form-control" ng-model="pri.priorityCountry" ng-disabled="!vm.editEnabled">
+                <option ng-repeat="country in vm.listCountries" value="{{country}}"> {{country}} </option>
+              </select>
+            </div>
+            <label class="col-sm-2 control-label">Priority Date</label>
+            <div class="col-sm-3">
+              <p class="input-group">
+                <input type="text" class="form-control" uib-datepicker-popup ng-model="pri.priorityDate" is-open="vm.priorityDatePicker[$index]" datepicker-options="vm.dateOptions"  close-text="Close" ng-disabled="!vm.editEnabled"/>
+                <span class="input-group-btn">
+                  <button type="button" class="btn btn-default" ng-click="vm.openPriorityDatePicker($index)"><i class="glyphicon glyphicon-calendar"></i></button>
+                </span>
+              </p>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-offset-2 col-sm-2 control-label">App. Number</label>
+            <div class="col-sm-3">
+              <input class="form-control" placeholder="Filing Number" ng-model="pri.priorityFilingNumber" ng-disabled="!vm.editEnabled">
+            </div>
+            <div class="col-sm-1">
+              <a style="display:inline" ng-click="vm.deletePriority($index)" ng-show="vm.editEnabled">
+                <span class="glyphicon glyphicon-remove control-label"></span>
+              </a>
+            </div>
           </div>
         </div>
-        <div class="form-group" ng-show="vm.enablePriorityForm">
-          <label class="col-sm-offset-2 col-sm-2 control-label" >Country</label>
-          <div class="col-sm-3">
-            <select class="form-control"  ng-model="vm.patent.priority.priorityCountry" ng-disabled="!vm.enablePriorityForm || !vm.editEnabled">
-              <option ng-repeat="country in vm.listCountries" value="{{country}}"> {{country}} </option>
-            </select>
-          </div>
-          <label class="col-sm-2 control-label">Priority Date</label>
-          <div class="col-sm-3">
-            <p class="input-group">
-              <input type="text" class="form-control" uib-datepicker-popup ng-model="vm.patent.priority.priorityDate" is-open="vm.picker2" datepicker-options="vm.dateOptions" close-text="Close" ng-disabled="!vm.enablePriorityForm || !vm.editEnabled"/>
-              <span class="input-group-btn">
-                <button type="button" class="btn btn-default" ng-click="vm.openDatePicker2()"><i class="glyphicon glyphicon-calendar" ng-disabled="!vm.enablePriorityForm || !vm.editEnabled"></i></button>
-              </span>
-            </p>
-          </div>
-        </div>
-        <div class="form-group" ng-show="vm.enablePriorityForm">
-          <label class="col-sm-offset-2 col-sm-2 control-label">App. Number</label>
-          <div class="col-sm-3">
-            <input class="form-control" placeholder="Filing Number" ng-model="vm.patent.priority.priorityFilingNumber" ng-disabled="!vm.enablePriorityForm || !vm.editEnabled">
-          </div>
-        </div>
-        <!-- Priority Form End -->
       <hr>
         <!-- Inventors Information -->
         <div class="form-group">
@@ -124,20 +156,20 @@
         <!-- Status -->
         <div class="form-group">
           <label class="col-sm-2 control-label">Status</label>
-          <a class="btn btn-sm btn-primary col-sm-offset-1 col-sm-2" ng-disabled="vm.displayStatus('Active')" ng-click="vm.changeStatus('Active')">Active</a>
-          <a class="btn btn-sm btn-danger col-sm-offset-1 col-sm-2" ng-disabled="vm.displayStatus('Abandoned')" ng-click="vm.changeStatus('Abandoned')">Abandoned</a>
-          <a class="btn btn-sm btn-success col-sm-offset-1 col-sm-2" ng-disabled="vm.displayStatus('Allowed')" ng-click="vm.changeStatus('Allowed')">Allowed</a>
+          <a class="btn btn-sm btn-primary col-sm-offset-1 col-sm-2" ng-disabled="!vm.statusIs('Active')" ng-click="vm.changeStatus('Active')">Active</a>
+          <a class="btn btn-sm btn-danger col-sm-offset-1 col-sm-2" ng-disabled="!vm.statusIs('Abandoned')" ng-click="vm.changeStatus('Abandoned')">Abandoned</a>
+          <a class="btn btn-sm btn-success col-sm-offset-1 col-sm-2" ng-disabled="!vm.statusIs('Allowed')" ng-click="vm.changeStatus('Allowed')">Allowed</a>
         </div>
         <!-- Status End -->
         <hr>
         <!-- Edit/Cancel Button -->
         <div class="form-group" ng-show="!vm.editEnabled">
-          <div class="col-sm-offset-3 col-sm-6">
+          <div class="col-sm-offset-4 col-sm-6">
             <button class="btn btn-info form-control btn-xs" ng-click="vm.enableEdit()"> Edit </button>
           </div>
         </div>
         <div class="form-group" ng-show="vm.editEnabled">
-          <div class="col-sm-offset-3 col-sm-6">
+          <div class="col-sm-offset-4 col-sm-6">
             <button class="btn btn-danger form-control btn-xs" ng-click="vm.cancelEdit()"> Cancel </button>
           </div>
         </div>
@@ -145,7 +177,7 @@
         <hr>
         <!-- Save Button -->
         <div class="form-group" ng-show="vm.editEnabled">
-          <div class="col-sm-offset-3 col-sm-6">
+          <div class="col-sm-offset-4 col-sm-6">
             <button class="btn btn-success form-control btn-xs" ng-click="vm.save()"> Save </button>
           </div>
         </div>
@@ -165,9 +197,9 @@
               <label class="col-sm-2 control-label">Deadline Date</label>
               <div class="col-sm-4">
                 <p class="input-group">
-                  <input type="text" class="form-control" uib-datepicker-popup ng-model="vm.newEvent.eventDeadline" is-open="vm.picker3" datepicker-options="vm.dateOptions" close-text="Close"/>
+                  <input type="text" class="form-control" uib-datepicker-popup ng-model="vm.newEvent.eventDeadline" is-open="vm.picker['Event']" datepicker-options="vm.dateOptions" close-text="Close"/>
                   <span class="input-group-btn">
-                    <button type="button" class="btn btn-default" ng-click="vm.openDatePicker3()"><i class="glyphicon glyphicon-calendar"></i></button>
+                    <button type="button" class="btn btn-default" ng-click="vm.openDatePicker('Event')"><i class="glyphicon glyphicon-calendar"></i></button>
                   </span>
                 </p>
               </div>
