--- a/public/js/patentManager/patentManager.html
+++ b/public/js/patentManager/patentManager.html
@@ -70,8 +70,8 @@
     <div class="col-xs-12">
       <div class="box">
         <div class="box-header">
-          <a href="#" class="btn btn-info col-xs-6" ng-click="vm.toggleAdvancedSearch()">Advanced Search</a>
-          <a href="#" class="btn btn-success col-xs-6" ng-click="vm.newPatentForm()">New Patent</a>
+          <a class="btn btn-info col-xs-6" ng-click="vm.toggleAdvancedSearch()">Advanced Search</a>
+          <a class="btn btn-success col-xs-6" ng-click="vm.newPatentForm()">New Patent</a>
         </div>
         <!-- /.box-header -->
         <div class="box-body">
